name:                 echo-server
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Koen De Keyser
maintainer:           koen.dekeyser@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable echo-server
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5,
                        network,
                        monad-loops,
                        bytestring
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -O2 -threaded -rtsopts
